--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/floatdrop/vinyl-git",
   "dependencies": {
     "staged-git-files": "0.0.2",
+    "strip-bom": "^0.3.1",
     "through2": "^0.5.1",
     "vinyl": "^0.3.0"
   }
