--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "bluebird": "^2.2.2",
     "gift": "^0.4.2",
+    "mkdirp": "^0.5.0",
     "mocha": "^1.21.3",
+    "rimraf": "^2.2.8",
     "should": "^4.0.4"
   }
 }
